Fix collapsed-logged-in

--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -2667,12 +2667,7 @@ input[type="button"].btn-block {
   margin-top:-60px;
   display: none;
 }
-.logged-in {
-   padding-top:15px;	
-   height:72px;
-   margin-bottom:-40px;
-  /*display: none;*/
-}
+
 
 
 .collapse.in {
